--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,18 @@ header {
     align-items: center;
 }
 
+.head-container .head-title{
+    font-weight: bold;
+    font-size: 1.2rem;
+}
+
+
+.head-container .head-item{
+    font-weight: bold;
+    font-size: 1.2rem;
+}
+
+
 @media only screen and (min-width : 1200px) {
     .inner{
         max-width: 1200px;
