--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ body {
     width: 100%;
     height: 100%;
     margin: 0 auto;
+    padding: 0 2rem
 }
 
 header {
@@ -69,6 +70,48 @@ a:hover {
 .head-container .head-title a:hover {
   color: #2186c4;
   cursor: pointer;
+}
+
+
+section {
+    background-color:  #ffffff;
+    width: 100%;
+}
+
+.main {
+    height: 300px;
+    background-image: url("https://www.fun-coding.org/assets_lms/images/photodune-4161018-group-of-students-m.jpg");
+    background-size: cover;
+    background-position: center 0%;
+    z-index: 1;
+}
+
+.main-container{
+    width: 100%;
+    height: 100%;
+    background-color: #3f464d;
+    opacity: 0.8;
+    margin-top: 60px;
+    z-index: 2;
+}
+
+.title {
+  font-size: 2rem;
+  font-weight: bold;
+  color: #fff;
+  margin-bottom: 0.8rem;
+}
+
+.title-container {
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+
+.message {
+  font-size: 1.4rem;
+  font-weight: normal;
+  color: #fff;
+  line-height: 2rem;
 }
 
 
