--- a/css/style.css
+++ b/css/style.css
@@ -163,6 +163,25 @@ section {
 }
 
 
+.roadmap-container{
+  /* display: flex; */
+
+
+}
+
+.roadmap-title-container{
+  /* align-content: space-between;*/
+    
+  
+
+}
+
+.class-list-container{
+
+
+}
+
+
 @media only screen and (min-width : 1200px) {
     .inner{
         max-width: 1200px;
@@ -170,7 +189,7 @@ section {
 }
 
 /*980이하일떄*/
-@media only screen and (max-width : 980px) { 
+@media only screen and (max-width : 980px) {  
     .skill-container{
         display: none;
     }
